<resources>
    <string name="app_name">Game Quiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">PassWord</string>
    <string name="category_name">Category Name</string>
    <string name="play">Play</string>
    <string name="todo">TODO</string>
    <string name="answer_d">Answer D</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_a">Answer A</string>
    <string name="_1_30">1/30</string>
    <string name="_0">0</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="try_again">Try Again</string>
    <string name="passed_0_30">Passed : 0/30</string>
    <string name="score_0">Score : 0</string>
    <string name="text_question">"First Grand Slam of the year"</string>

    <string name="start_quiz">Start Quiz</string>
    <string name="high_score">High Score</string>
    <string name="score">0</string>
    <string name="_00_23">00:23</string>
    <string name="confirm">Confirm</string>
    <string name="here_will_be_the_question">Here will be the question</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="option_1">Korea</string>
    <string name="option_2">Usa</string>
    <string name="option_3">Japan</string>
    <string name="option_4">England</string>

</resources>
